# python-devcontainer

./: .cspell.json  .gitattributes  .gitignore  README.md  cdk.json  mise.toml  pyproject.toml
.crossnote/: head.html  parser.js  style.less
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postAttachCommand.sh  postCreateCommand.sh  python_devcontainer.a5er
.devcontainer/pginit/: 02-ddl.sql  03_data-import.sh
.devcontainer/pginit/sql/: public.permissions.sql  public.role_permissions.sql  public.roles.sql  public.user_credentials.sql  public.user_roles.sql  public.users.sql
docs/: README.ods  openapi.yml  ダイアグラムサンプル.md
docs/sphinx/: conf.py  index.rst
scripts/: docs.sh
src/: hello.py
src/api/: error_middleware.py  get_user.py
src/api/middleware/: error.py  validate.py
src/api/repository/: db_connector.py  user_repository.py
src/cdk/: BackendStack.py  app.py
tests/: test_hello.py
tests/api/: test_get_user.py
