[project]
name = "Python-DevContainer"
version = "0.1.0"
description = "DevContainer を利用した Python 用の開発環境"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
line-length = 120
fix = true
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
]
select = ["E", "F", "B", "S", "D", "PLR"]
ignore = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "INP001",  # __init__.pyがない
    "EXE002",  # シバンがない
]
unfixable = [
    
]
logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101",     # assert を許可
  "D",        # docstring 不要
]

[tool.pytest.ini_options]
pythonpath = ["src",]
testpaths = ["tests",]
addopts = "-v"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
